<resources>
    <string name="channel_id">지누팅</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_member_txt">&lt;b>%s&lt;/b> %s</string>
    <string name="app_name">지누팅</string>
    <string name="join">회원가입</string>
    <string name="login">로그인</string>
    <string name="app_intro">경상국립대학교 새로운 만남 과팅앱\n<b>지누팅</b>\n학교 속 새로운 인연을 만나보세요</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="verify_email">메일 인증하기</string>
    <string name="password_content">가입시 등록한 <b>학교 이메일</b>로\n 본인인증 후 Password를 찾을 수 있습니다.</string>
    <string name="consent_service">서비스 이용 동의</string>
    <string name="next">다음</string>
    <string name="join_complete">가입 완료</string>
    <string name="join3_content">아이콘을 눌러\n회원님의 <b>프로필 사진</b>을 등록해주세요.</string>
    <string name="join3_txt_pass"><u>나중에 할게요</u></string>
    <string name="alarm_setting_txt"><font color='#000000'>기기 설정 내</font> <font color='#FF6F61'>지누팅 알림</font><font color='#000000'>을</font> <font color='#FF6F61'>꼭! 허용</font><font color='#000000'>해 주세요</font></string>
</resources>