<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.user.StartFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_intro"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="115dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="18dp"
        android:layout_marginHorizontal="35dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingVertical="18dp"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/background_radius_10dp_solid_main"
        app:layout_constraintBottom_toTopOf="@+id/start_btn_join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_btn_join"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:layout_marginBottom="76dp"
        android:layout_marginHorizontal="35dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle"
        android:paddingVertical="18dp"
        android:background="@drawable/background_radius_10dp_solid_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>