<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="19dp"
    tools:context=".ui.fragment.user.PasswordFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/password_img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/password_img_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password_img_back" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/password_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/password"
        app:layout_constraintBottom_toTopOf="@+id/password_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/password_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/password_img"
        app:layout_constraintEnd_toEndOf="@+id/password_img"
        app:layout_constraintTop_toBottomOf="@+id/password_img" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/password_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_radius_10dp_solid_main"
        android:paddingVertical="18dp"
        android:text="@string/verify_email"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>