<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="19dp"
    tools:context=".ui.fragment.user.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="170dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_img_back"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="27dp"
        android:paddingVertical="19dp"
        android:textSize="15sp"
        android:layout_marginTop="40dp"
        android:textColorHint="@color/gray1"
        android:background="@drawable/background_radius_10dp_solid_gray2"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_txt_title"
        android:hint="@string/email"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="27dp"
        android:paddingVertical="19dp"
        android:layout_marginTop="12dp"
        android:textSize="15sp"
        android:textColorHint="@color/gray1"
        android:inputType="textPassword"
        android:background="@drawable/background_radius_10dp_solid_gray2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_edit_email"
        android:hint="@string/password"/>



    <TextView
        android:id="@+id/login_txt_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray3"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="37dp"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_edit_password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="37dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingVertical="18dp"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/background_radius_10dp_solid_main"
        app:layout_constraintTop_toBottomOf="@+id/login_txt_forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>